syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message DeleteOrderRequest {
  string order_id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}